Colleen suggested edits

--- a/index.html
+++ b/index.html
@@ -43,24 +43,51 @@
         <div class="container">
             <div class="row  g-4">
                 <div class="col-md-4">
-                    <h3>CRISPER</h3>
                     <div class="list-group list-group-flush">
-                        <a href="contact_tracing_map.html" class="list-group-item list-group-item-action">Contact Tracing Map</a>
-                        <!-- a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a-->
-                        <a href="automated_alerts.html" class="list-group-item list-group-item-action">Automated Alerts</a>
-                        <a href="dashboards.html" class="list-group-item list-group-item-action">Other Dashboards</a>
-                        <a href="data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
-                        <a href="mobile_contact_tracing_map.html" class="list-group-item list-group-item-action">Mobile App</a>
-		        <a href="about_us.html" class = "list-group-item list-group-item-action">About Us</a>
-		      <br>
-                        <br>
-                    <h3>Resources</h3>
 
-                        <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" class="list-group-item list-group-item-action" target="_blank">Department of Health</a>
-                        <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" class="list-group-item list-group-item-action" target="_blank">World Health Organisation</a>
-                        <a></a> <!-- to get a final line -->
+                        <h3>CRISPER</h3>
+                            <a href="contact_tracing_map.html" class="list-group-item list-group-item-action">Contact Tracing Map</a>
+                            <!-- a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a-->
+                            <a href="automated_alerts.html" class="list-group-item list-group-item-action">Automated Alerts</a>
+                            <a href="dashboards.html" class="list-group-item list-group-item-action">Other Dashboards</a>
+                            <a href="data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
+                            <a href="mobile_contact_tracing_map.html" class="list-group-item list-group-item-action">Mobile App</a>
+                            <a href="about_us.html" class = "list-group-item list-group-item-action">About Us</a>
+		      
+                        <br><br>
 
-                      </div>
+                        <h3>Resources</h3>
+
+                            <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" class="list-group-item list-group-item-action" target="_blank">
+                                Australian Department of Health</a>
+                            <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" class="list-group-item list-group-item-action" target="_blank">
+                                World Health Organization</a>
+                            <a></a> <!-- to get a final line -->
+
+                        <br><br>
+
+                        <h5> State and Territory Health Departments</h5>
+
+                            <a href="https://www.covid19.act.gov.au/" class="list-group-item list-group-item-action" target="_blank">
+                            Australian Capital Territory</a>
+                            <a href="https://www.nsw.gov.au/covid-19" class="list-group-item list-group-item-action" target="_blank">
+                            New South Wales</a>
+                            <a href="https://coronavirus.nt.gov.au/" class="list-group-item list-group-item-action" target="_blank">
+                            Northern Territory</a>
+                            <a href="https://www.covid19.qld.gov.au/" class="list-group-item list-group-item-action" target="_blank">
+                            Queensland</a>
+                            <a href="https://www.covid-19.sa.gov.au/" class="list-group-item list-group-item-action" target="_blank">
+                            South Australia</a>
+                            <a href="https://www.coronavirus.tas.gov.au/" class="list-group-item list-group-item-action" target="_blank">
+                            Tasmania</a>
+                            <a href="https://www.coronavirus.vic.gov.au/" class="list-group-item list-group-item-action" target="_blank">
+                            Victoria</a>
+                            <a href="https://www.wa.gov.au/government/covid-19-coronavirus" class="list-group-item list-group-item-action" target="_blank">
+                            Western Australia</a>                                               
+
+                            <a></a> <!-- to get a final line -->
+
+                    </div>
                 </div>
 
                 <div class="col-md">
