--- a/index.html
+++ b/index.html
@@ -35,6 +35,33 @@
 <body>
     <div id="header"></div>
 
+    <!-- <section>
+        <div class="container ">
+            <div class="row align-items-center g-5">
+                <div class="col">
+                    <div class="overlay">
+                        <div class="overlay-content">Default overlay</div>
+                      </div>
+                    <div class="overlay has-bg-img rounded h-10rem my-2">
+                        <div class="overlay-content align-items-end text-white">The COVID-19 real-time informations for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia.</div>
+                        <img src="Assets/CORONA_FromPixabay_BW.jpg" class="bg-img" alt="...">
+
+                      </div>
+
+                    <h4 class = "lh-base">
+                        The COVID-19 real-time informations for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. 
+                        </h4>
+                </div>
+                <div class="col-md-4 p-5">
+                    <h4 class = "lh-base">
+                        The COVID-19 real-time informations for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. 
+                        </h4>
+
+		        </div>
+            </div>
+        </div>
+    </section> -->
+
 
     <!-- ---------------------- -->
     <!-- CARDS -->
@@ -44,7 +71,9 @@
             <div class="row  g-4">
                 <div class="col-md-4">
                     <div class="list-group list-group-flush">
-
+                        <h5 class = "lh-base pb-4">
+                            The COVID-19 real-time informations for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. 
+                            </h5>
                         <h3>CRISPER</h3>
                             <a href="contact_tracing_map.html" class="list-group-item list-group-item-action">Contact Tracing Map</a>
                             <!-- a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a-->
