--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                       <h5 class="card-title">Data Engine</h5>
                                       <p class="card-text">The CRISPER
                                 Data Engine is a resource supporting
-                                the Automatic Alerts and the
+                                the Automated Alerts and the
                                 Dashboards. The Data Engine provides
                                 access to many cleansed data sources collected into one place.</p>
                                       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
