--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div class="overlay-content">Default overlay</div>
                       </div>
                     <div class="overlay has-bg-img rounded h-10rem my-2">
-                        <div class="overlay-content align-items-end text-white">The COVID-19 real-time informations for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia.</div>
+                        <div class="overlay-content align-items-end text-white">The COVID-19 real-time information for COVID-19 cases, deaths, tests, and contact tracing alert locations in Australia.</div>
                         <img src="Assets/CORONA_FromPixabay_BW.jpg" class="bg-img" alt="...">
 
                       </div>
