--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                       </div>
 
                     <h4 class = "lh-base">
-                        The COVID-19 real-time informations for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. 
+                        The COVID-19 real-time information for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. 
                         </h4>
                 </div>
                 <div class="col-md-4 p-5">
                     <h4 class = "lh-base">
-                        The COVID-19 real-time informations for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. 
+                        The COVID-19 real-time information for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. 
                         </h4>
 
 		        </div>
@@ -72,7 +72,7 @@
                 <div class="col-md-4">
                     <div class="list-group list-group-flush">
                         <h5 class = "lh-base pb-4">
-                            The COVID-19 real-time informations for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. 
+                            The COVID-19 real-time information for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. 
                             </h5>
                         <h3>CRISPER</h3>
                             <a href="contact_tracing_map.html" class="list-group-item list-group-item-action">Contact Tracing Map</a>
