--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
                     </h6>
                     <p class="text-justify">
                         <small>
-                            The COVID-19 real-time informations for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. The system comprises four main components: 
+                            The COVID-19 real-time information for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. The system comprises four main components: 
                             <ul>
                                 <li>
                                     Map of Contact Tracing Alert Locations
