--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                             <a href="automated_alerts.html" class="list-group-item list-group-item-action">Automated Alerts</a>
                             <a href="dashboards.html" class="list-group-item list-group-item-action">Other Dashboards</a>
                             <a href="data_engine.html" class="list-group-item list-group-item-action">Data Engine</a>
+                            <a href="data_sources.html" class="list-group-item list-group-item-action">Data Sources</a>
                             <a href="mobile_contact_tracing_map.html" class="list-group-item list-group-item-action">Mobile App</a>
                             <a href="about_us.html" class = "list-group-item list-group-item-action">About Us</a>
 		      
