perl -pi -e s|type="_blank"|target="_blank"|g about_us.html contact_tracing_map.html data_sources.html

--- a/about_us.html
+++ b/about_us.html
@@ -46,7 +46,7 @@
               <div class="row row-cols-md-3 g-5">
 
                       <div class="col-sm">
-                        <a href="https://rsph.anu.edu.au/" class="card h-100 my-1 text-decoration-none text-dark border-light" style="width: 100%;" type="_blank">
+                        <a href="https://rsph.anu.edu.au/" class="card h-100 my-1 text-decoration-none text-dark border-light" style="width: 100%;" target="_blank">
                                 <img src="Assets/Logos/ANU+GRAPHC.png" class = "">
                             <div class="card-body">
 
@@ -86,7 +86,7 @@
                       </div>
 
                       <div class="col-sm">
-                        <a href="https://public-health.uq.edu.au/" class="card h-100 my-1 text-decoration-none text-dark border-light" style="width: 100%;" type="_blank">
+                        <a href="https://public-health.uq.edu.au/" class="card h-100 my-1 text-decoration-none text-dark border-light" style="width: 100%;" target="_blank">
                                 <img src="Assets/Logos/UQ_Logo_Colour_Small16x9.png" class = "">
                             <div class="card-body">
 
@@ -115,7 +115,7 @@
                       </div>
 
                     <div class="col-sm">
-                      <a href="https://sii.anu.edu.au/" class="card h-100 my-1 text-decoration-none text-dark border-light" style="width: 100%;" type="_blank">
+                      <a href="https://sii.anu.edu.au/" class="card h-100 my-1 text-decoration-none text-dark border-light" style="width: 100%;" target="_blank">
                               <img src="Assets/Logos/SoftwareInnovationInstitute_Small16x9.png" class = "">
                           <div class="card-body">
 
@@ -159,7 +159,7 @@
                     </div>
 <!-- 
                     <div class="col-sm">
-                      <a href="http://graphc.anu.edu.au/" class="card my-1 text-decoration-none text-dark border-light h-100" style="width: 100%;" type="_blank">
+                      <a href="http://graphc.anu.edu.au/" class="card my-1 text-decoration-none text-dark border-light h-100" style="width: 100%;" target="_blank">
                               <img src="Assets/Logos/GRAPHC_Logo_Small.png" class = "">
                           <div class="card-body">
 
@@ -222,7 +222,7 @@
           <div class="row row-cols-md-4 g-5">
 
                   <div class="col-md-3 col-xs">
-                    <a href="https://www.apprise.org.au/" class="card h-100 my-1 text-decoration-none text-dark border-0" style="width: 100%;" type="_blank">
+                    <a href="https://www.apprise.org.au/" class="card h-100 my-1 text-decoration-none text-dark border-0" style="width: 100%;" target="_blank">
                             <img src="Assets/Logos/APPRISE_logo_square.png" class = "">
                         <div class="card-body">
                           <h5 class="card-title lh-base mb-3">Australian Partnership for Preparedness Research on Infectious Disease Emergencies</h5>
@@ -236,7 +236,7 @@
                   </div>
 
                   <div class="col-md-3 col-xs">
-                    <a href="https://www.nhmrc.gov.au/" class="card h-100 my-1 text-decoration-none text-dark border-light" style="width: 100%;" type="_blank">
+                    <a href="https://www.nhmrc.gov.au/" class="card h-100 my-1 text-decoration-none text-dark border-light" style="width: 100%;" target="_blank">
                             <img src="Assets/Logos/NHMRC_Red.png" class = "">
                         <div class="card-body">
                           <h5 class="card-title lh-base mb-3">National Health and Medical Research Council</h5>
