--- a/data_sources.html
+++ b/data_sources.html
@@ -47,7 +47,7 @@
 
                 
                     <div class="col-md-4 col-sm-12">
-                            <a href="https://www.covid19.act.gov.au/updates/act-covid-19-statistics" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                            <a href="https://www.covid19.act.gov.au/updates/act-covid-19-statistics" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                                 <!-- <div class="ratio ratio-16x9">
                                     <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                                 </div> -->
@@ -58,7 +58,7 @@
                             </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.health.nsw.gov.au/Infectious/covid-19/Pages/stats-nsw.aspx" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.health.nsw.gov.au/Infectious/covid-19/Pages/stats-nsw.aspx" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -69,7 +69,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://coronavirus.nt.gov.au/current-status" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://coronavirus.nt.gov.au/current-status" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -80,7 +80,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.qld.gov.au/health/conditions/health-alerts/coronavirus-covid-19/current-status/statistics" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.qld.gov.au/health/conditions/health-alerts/coronavirus-covid-19/current-status/statistics" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -91,7 +91,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.covid-19.sa.gov.au/home/dashboard" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.covid-19.sa.gov.au/home/dashboard" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -102,7 +102,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.coronavirus.tas.gov.au/facts/tasmanian-statistics" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.coronavirus.tas.gov.au/facts/tasmanian-statistics" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -113,7 +113,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -124,7 +124,7 @@
                         </a>
                     </div>
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://experience.arcgis.com/experience/359bca83a1264e3fb8d3b6f0a028d768" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://experience.arcgis.com/experience/359bca83a1264e3fb8d3b6f0a028d768" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="col-md-4 col-sm-12">
-                        <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" type="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
+                        <a href="https://www.health.gov.au/news/health-alerts/novel-coronavirus-2019-ncov-health-alert/coronavirus-covid-19-case-numbers-and-statistics" target="_blank" class="btn btn-dark btn-lg" style="width: 100%;">
                             <!-- <div class="ratio ratio-16x9">
                                 <img src="Assets/Contact Tracing.png" class="card-img-top" alt="...">
                             </div> -->
@@ -165,7 +165,7 @@
                         <tr>
                             <td>New South Wales <br>(Postcode Cases)</td>
                             <td>
-                                <a href="https://data.nsw.gov.au/data/dataset/covid-19-cases-by-location" type="_blank" class="text-dark">
+                                <a href="https://data.nsw.gov.au/data/dataset/covid-19-cases-by-location" target="_blank" class="text-dark">
                                     https://data.nsw.gov.au/data/dataset/covid-19-cases-by-location
                                 </a>
                             </td>
@@ -174,7 +174,7 @@
                         <tr>
                             <td>New South Wales <br>(Localities)</td>
                             <td>
-                                <a href="https://data.nsw.gov.au/data/dataset/nsw-covid-19-case-locations/resource/f3a28eed-8c2a-437b-8ac1-2dab3cf760f9" type="_blank" class="text-dark">
+                                <a href="https://data.nsw.gov.au/data/dataset/nsw-covid-19-case-locations/resource/f3a28eed-8c2a-437b-8ac1-2dab3cf760f9" target="_blank" class="text-dark">
                                     https://data.nsw.gov.au/data/dataset/nsw-covid-19-case-locations/resource/f3a28eed-8c2a-437b-8ac1-2dab3cf760f9
                                 </a>
                             </td>
@@ -183,7 +183,7 @@
                         <tr>
                             <td>New South Wales <br>(Transport)</td>
                             <td>
-                                <a href="https://data.nsw.gov.au/data/dataset/nsw-covid-19-public-transport-routes/resource/954de47e-959d-495f-a85e-23fe66aea395" type="_blank" class="text-dark">
+                                <a href="https://data.nsw.gov.au/data/dataset/nsw-covid-19-public-transport-routes/resource/954de47e-959d-495f-a85e-23fe66aea395" target="_blank" class="text-dark">
                                     https://data.nsw.gov.au/data/dataset/nsw-covid-19-public-transport-routes/resource/954de47e-959d-495f-a85e-23fe66aea395
                                 </a>
                             </td>
@@ -192,7 +192,7 @@
                         <tr>
                             <td>Victoria <br>(Case Numbers by Location)</td>
                             <td>
-                                <a href="https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data" type="_blank" class="text-dark">
+                                <a href="https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data" target="_blank" class="text-dark">
                                     https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data
                                 </a>
                             </td>
@@ -201,7 +201,7 @@
                         <tr>
                             <td>Victoria </td>
                             <td>
-                                <a href="https://discover.data.vic.gov.au/dataset/all-victorian-sars-cov-2-covid-19-current-exposure-sites/resource/afb52611-6061-4a2b-9110-74c920bede77" type="_blank" class="text-dark">
+                                <a href="https://discover.data.vic.gov.au/dataset/all-victorian-sars-cov-2-covid-19-current-exposure-sites/resource/afb52611-6061-4a2b-9110-74c920bede77" target="_blank" class="text-dark">
                                     https://discover.data.vic.gov.au/dataset/all-victorian-sars-cov-2-covid-19-current-exposure-sites/resource/afb52611-6061-4a2b-9110-74c920bede77
                                 </a>
                             </td>
@@ -210,7 +210,7 @@
                         <tr>
                             <td>Australian Capital Territory</td>
                             <td>
-                                <a href="https://www.covid19.act.gov.au/news-articles/exposure-locations-in-the-act" type="_blank" class="text-dark">
+                                <a href="https://www.covid19.act.gov.au/news-articles/exposure-locations-in-the-act" target="_blank" class="text-dark">
                                 https://www.covid19.act.gov.au/news-articles/exposure-locations-in-the-act
                                 </a>
                             </td>
@@ -219,7 +219,7 @@
                         <tr>
                             <td>Northern Territory </td>
                             <td>
-                                <a href="https://coronavirus.nt.gov.au/stay-safe/case-location-alerts-and-public-exposure-sites" type="_blank" class="text-dark">
+                                <a href="https://coronavirus.nt.gov.au/stay-safe/case-location-alerts-and-public-exposure-sites" target="_blank" class="text-dark">
                                     https://coronavirus.nt.gov.au/stay-safe/case-location-alerts-and-public-exposure-sites
                                 </a>
                             </td>
@@ -228,7 +228,7 @@
                         <tr>
                             <td>Queensland</td>
                             <td>
-                                <a href="https://www.qld.gov.au/health/conditions/health-alerts/coronavirus-covid-19/current-status/contact-tracing" type="_blank" class="text-dark">
+                                <a href="https://www.qld.gov.au/health/conditions/health-alerts/coronavirus-covid-19/current-status/contact-tracing" target="_blank" class="text-dark">
                                     https://www.qld.gov.au/health/conditions/health-alerts/coronavirus-covid-19/current-status/contact-tracing
                                 </a>
                             </td>
@@ -237,7 +237,7 @@
                         <tr>
                             <td>South Australia </td>
                             <td>
-                                <a href="https://www.sahealth.sa.gov.au/wps/wcm/connect/public+content/sa+health+internet/conditions/infectious+diseases/covid-19/testing+and+tracing/contact+tracing/contact+tracing" type="_blank" class="text-dark">
+                                <a href="https://www.sahealth.sa.gov.au/wps/wcm/connect/public+content/sa+health+internet/conditions/infectious+diseases/covid-19/testing+and+tracing/contact+tracing/contact+tracing" target="_blank" class="text-dark">
                                     https://www.sahealth.sa.gov.au/wps/wcm/connect/public+content/sa+health+internet/conditions/infectious+diseases/covid-19/testing+and+tracing/contact+tracing/contact+tracing
                                 </a>
                             </td>
@@ -246,7 +246,7 @@
                         <tr>
                             <td>Western Australia </td>
                             <td>
-                                <a href="https://www.healthywa.wa.gov.au/Articles/A_E/Coronavirus/Locations-visited-by-confirmed-cases" type="_blank" class="text-dark">
+                                <a href="https://www.healthywa.wa.gov.au/Articles/A_E/Coronavirus/Locations-visited-by-confirmed-cases" target="_blank" class="text-dark">
                                     https://www.healthywa.wa.gov.au/Articles/A_E/Coronavirus/Locations-visited-by-confirmed-cases
                                 </a>
                             </td>
@@ -255,7 +255,7 @@
                         <tr>
                             <td>Tasmania </td>
                             <td>
-                                <a href="https://www.coronavirus.tas.gov.au/families-community/public-exposure-sites-in-tasmania" type="_blank" class="text-dark">
+                                <a href="https://www.coronavirus.tas.gov.au/families-community/public-exposure-sites-in-tasmania" target="_blank" class="text-dark">
                                     https://www.coronavirus.tas.gov.au/families-community/public-exposure-sites-in-tasmania
                                 </a>
                             </td>
