Updated Favicon so that its viewable on all browser background theme colours

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>CRiSPER: COVID-19 Real-time Information System for Preparedness and Epidemic Response</title>
+    <title>CRISPER: COVID-19 Real-time Information System for Preparedness and Epidemic Response</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="Assets/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="Assets/favicon_io/favicon-32x32.png">
