Update to "exposure sites" in line with general nomenclature.

--- a/footer.html
+++ b/footer.html
@@ -11,13 +11,14 @@
                     </h6>
                     <p class="text-justify">
                         <small>
-                            The COVID-19 real-time information for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. The system comprises four main components: 
+                            COVID-19 real-time information, reporting
+            cases, testing, and exposure sites in Australia. The system comprises four main components: 
                             <ul>
                                 <li>
-                                    Map of Contact Tracing Alert Locations
+                                    Map of Exposure Sites
                                 </li>
                                 <li>
-                                    Automated Alert System
+                                    Automated Alerts System
                                 </li>
                                 <li>
                                     Data Visualisation Dashboards
