--- a/header.html
+++ b/header.html
@@ -20,7 +20,8 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a href="contact_tracing_map.html" class="nav-link">Contact Tracing Map</a>
+                        <a href="contact_tracing_map.html"
+                class="nav-link">Exposure Sites</a>
                     </li>                
                     <li class="nav-item">
                         <a href="automated_alerts.html" class="nav-link">Automated Alerts</a>
