--- a/index.html
+++ b/index.html
@@ -49,18 +49,22 @@
                         <div class="overlay-content">Default overlay</div>
                       </div>
                     <div class="overlay has-bg-img rounded h-10rem my-2">
-                        <div class="overlay-content align-items-end text-white">The COVID-19 real-time information for COVID-19 cases, deaths, tests, and contact tracing alert locations in Australia.</div>
+                        <div class="overlay-content align-items-end
+        text-white">COVID-19 real-time information, reporting on cases,
+        tests, and exposure sites in Australia.</div>
                         <img src="Assets/CORONA_FromPixabay_BW.jpg" class="bg-img" alt="...">
 
                       </div>
 
                     <h4 class = "lh-base">
-                        The COVID-19 real-time information for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. 
+                        COVID-19 real-time information, reporting on
+                        cases, testing, and exposure sites in Australia. 
                         </h4>
                 </div>
                 <div class="col-md-4 p-5">
                     <h4 class = "lh-base">
-                        The COVID-19 real-time information for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. 
+                        COVID-19 real-time information, reporting on cases,
+                        testing, and exposure sites in Australia. 
                         </h4>
 
 		        </div>
@@ -78,7 +82,8 @@
                 <div class="col-md-4">
                     <div class="list-group list-group-flush">
                         <h5 class = "lh-base pb-4">
-                            The COVID-19 real-time information for COVID-19 cases, deaths, testing, and contact tracing alert locations in Australia. 
+                            COVID-19 real-time information, reporting
+    on cases, testing, and exposure sites in Australia. 
                             </h5>
                         <h3>CRISPER</h3>
                             <a href="contact_tracing_map.html" class="list-group-item list-group-item-action">Contact Tracing Map</a>
@@ -136,8 +141,11 @@
                                             <img src="Assets/Contact Tracing_filter.png" class="card-img-top border-bottom border-warning border-4" alt="...">
                                         </div>
                                         <div class="card-body">
-                                        <h5 class="card-title lh-base">Map of Current COVID-19 Contact Tracing Alert Locations</h5>
-                                        <p class="card-text">This Web App gathers contact tracing alert locations from all state and 
+                                        <h5 class="card-title
+                                    lh-base">Current COVID-19
+                                    Exposure Sites</h5>
+                                        <p class="card-text">A Web App
+                                    that gathers COVID-19 exposure sites from all state and 
                                             territory health departments across Australia and presents the information in an interactive map.  
                                             Check if you or your family and loved ones have been to these locations.</p>
                                         <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
