--- a/mobile_contact_tracing_map.html
+++ b/mobile_contact_tracing_map.html
@@ -54,18 +54,19 @@
                 </div> 
 
                 <div class="col"> 
-                    <h1> Contact Tracing Alert Locations Map for Mobile</h1>
+                    <h1> Contact Tracing Alert Locations<br><br>Exposure
+                    Sites <br> <br>A Map for Mobile</h1>
                     <br><br> 
-		  Coming soon.
+		  <b>Coming Soon</b>
 		  <br><br>
-		  Currently, the Web App for
+		  The current Web App for
                         <b>Smart Phones</b> can be installed as an App on
                         your smart phone by loading the URL
-                        <a href ="https://mobile.crisper.net.au" ><i>mobile.crisper.net.au</i></a>
+                        <a href ="https://mobile.crisper.net.au" target="_blank"><i>mobile.crisper.net.au</i></a>
                         into your browser and
                         then choose to <b>Add to Home Screen</b> (from the
-                        browser menu). This will install an icon on your
-                        home screen to directly access the App. 
+                        browser's menu). This will install an icon on your
+                        home screen to directly access the Web App. 
                     
                 </div>
             </div>
