Update to exposure sites

--- a/contact_tracing_map.html
+++ b/contact_tracing_map.html
@@ -56,7 +56,7 @@
                 </div> 
 
                 <div class="col-md-4 p-5"> 
-                    <h1> Contact Tracing Alert Locations Map </h1>
+                    <h1> Exposure Sites </h1>
                     <br><br> 
                     <p>The map shows all current contact tracing
                         alert locations (locations where potential exposure to
@@ -65,13 +65,14 @@
                         show the actual details. Icons include specific
                         locations (red points) and transportation (trains,
                         buses, flights, ferries, etc). Alerts can be filtered
-                        by date, state, and postcode. Search functions by
-                        postcode, suburb or address also allow alert locations
+                        by date, state, and postcode. Search functions
+		  include
+		  postcode, suburb or address allowing exposure sites
                         to be easily identified. Tap the crosshair icon to
                         zoom into your current location. </p>
                 
                     <p>The Web App was developed with mobile phone capability so users
-                        can easily check for new exposure locations and
+                        can easily check for new exposure sites and
                         visualise areas with multiple alerts. The Web App for
                         <b>Smart Phones</b> can be installed as an App on
                         your smart phone by loading the URL
