Changed to Exposure Sites

--- a/contact_tracing_map.html
+++ b/contact_tracing_map.html
@@ -45,7 +45,7 @@
                 <div class="col-md-8">
                     <div class="embed-responsive embed-responsive-16by9">
                         <iframe class="embed-responsive-item border border-dark border-4" src="https://mobile.crisper.net.au"
-                        title="Contact Tracing Map" height="900px" width="100%"></iframe>
+                        title="Exposure Sites" height="900px" width="100%"></iframe>
                     </div>
                     <!-- <iframe
                         src="https://mobile.crisper.net.au"
@@ -149,7 +149,7 @@
                 Some locations may not be precise due to limited information on the address or for other reasons. </b>
         </p>
 
-        <p>The Contact Tracing Alert Locations Map was
+        <p>The Exposure Sites Map was
             developed by the ANU's Research School of Population
             Health's <a
             href="https://rsph.anu.edu.au/research/groups/national-centre-geographic-resources-analysis-primary-health-care-graphc">GRAPHC</a>
