--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     on cases, testing, and exposure sites in Australia. 
                             </h5>
                         <h3>CRISPER</h3>
-                            <a href="contact_tracing_map.html" class="list-group-item list-group-item-action">Contact Tracing Map</a>
+                            <a href="contact_tracing_map.html" class="list-group-item list-group-item-action">Exposure Sites</a>
                             <!-- a href="https://experience.arcgis.com/experience/1606ae83c91e4dc68c95170e7f37e9e9" class="list-group-item list-group-item-action">Smartphone Application Contact Tracing Map</a-->
                             <a href="automated_alerts.html" class="list-group-item list-group-item-action">Automated Alerts</a>
                             <a href="dashboards.html" class="list-group-item list-group-item-action">Other Dashboards</a>
