edited about us page to include NCI

--- a/about_us.html
+++ b/about_us.html
@@ -190,30 +190,62 @@
                 </div>
     </section>
 
+    <hr class="col-8 mx-auto text-warning border border-3 border-warning">
 
-  <section class="py-5">
-    <div class="container">
-        <h4 class="py-3">Collaborators and Contributers</h4>
+    <section class="py-3">
+      <div class="container">
+          <h1 class="py-3">Special Thanks</h1>
 
-          <ul>
-            <li>
-              Prof Ross Andrews 
-            </li>
-            <li>
-              Prof Nigel Stocks
-            </li>
-            <li>
-              Dr Priyanka Pillai
-            </li>
-            <li>
-              Ms Charlee Law
-            </li>
-            <li>
-              Dr Nelson Lau
-            </li>
-          </ul>
-        
+            <div class="row row-cols-md-3 g-5">
+
+                    <div class="col-sm">
+                      <a href="https://nci.org.au/" class="card h-100 my-1 text-decoration-none text-dark border-light" style="width: 100%;" target="_blank">
+                              <img src="Assets/Logos/NCI_australia_16x9.png" class = "">
+                          <div class="card-body">
+                          <h5 class="card-title lh-base mb-3">National Computational Infrastructure Australia</h5>
+
+
+     
+                          </div>
+                      </a>
+                    </div>
+
+                    <div class="col-sm">
+                      <a href="" class="card h-100 my-1 text-decoration-none text-dark border-light" style="width: 100%;" target="_blank">
+                        <div class="ratio ratio-16x9 text-center">
+                          <img src="Assets/Logos/collab_icon.png" class = "">
+
+                          <!-- <i class="fas fa-users fa-8x"  style="vertical-align: middle;"></i>       -->
+                        </div>  
+                        <!-- <img src="Assets/Logos/UQ_Logo_Colour_Small16x9.png" class = ""> -->
+                          <div class="card-body">
+                            <h5 class="card-title lh-base mb-3">Collaborators and Contributors</h5>
+
+
+                            <ul>
+                              <li>
+                                Prof Ross Andrews 
+                              </li>
+                              <li>
+                                Prof Nigel Stocks
+                              </li>
+                              <li>
+                                Dr Priyanka Pillai
+                              </li>
+                              <li>
+                                Ms Charlee Law
+                              </li>
+                              <li>
+                                Dr Nelson Lau
+                              </li>
+                            </ul>
+                          </div>
+                      </a>
+                    </div>
+                  </div>
+              </div>
   </section>
+
 
   <hr class="col-8 mx-auto text-warning border border-3 border-warning">
 
