Optimised pages for Mobile

--- a/about_us.html
+++ b/about_us.html
@@ -41,11 +41,11 @@
     <!-- ---------------------- -->
     <!-- INTRO -->
     <!-- ---------------------- -->
-    <section class="py-3">
+    <section class="">
         <div class="container">
             <h1 class="py-3">About Us</h1>
 
-              <div class="row row-cols-md-3 g-5">
+              <div class="row row-cols-md-3">
 
                       <div class="col-sm">
                         <a href="https://rsph.anu.edu.au/" class="card h-100 my-1 text-decoration-none text-dark border-light" style="width: 100%;" target="_blank">
@@ -217,11 +217,11 @@
 
   <hr class="col-8 mx-auto text-warning border border-3 border-warning">
 
-  <section class="py-3">
+  <section class="">
     <div class="container">
         <h1 class="py-3">Funding</h1>
 
-          <div class="row row-cols-md-4 g-5">
+          <div class="row row-cols-md-4">
 
                   <div class="col-md-3 col-xs">
                     <a href="https://www.apprise.org.au/" class="card h-100 my-1 text-decoration-none text-dark border-0" style="width: 100%;" target="_blank">
