--- a/contact_tracing_map.html
+++ b/contact_tracing_map.html
@@ -39,11 +39,11 @@
     <!-- ---------------------- -->
     <!-- ARC GIS  -->
     <!-- ---------------------- -->
-    <section class="p-md-5">
-        <div class="container-fluid p-0 ">
-            <div class="row align-items-center g-5">
+    <section class="">
+        <div class="container-fluid ">
+            <div class="row align-items-center">
                 <div class="col-md-8">
-                    <div class="embed-responsive embed-responsive-16by9">
+                    <div class="embed-responsive embed-responsive-16by9 p-md-5">
                         <iframe class="embed-responsive-item border border-dark border-4" src="https://mobile.crisper.net.au"
                         title="Exposure Sites" height="900px" width="100%"></iframe>
                     </div>
