--- a/data_engine.html
+++ b/data_engine.html
@@ -44,11 +44,11 @@
     <!-- ---------------------- -->
     <section>
         <div class="container-fluid ">
-            <div class="row align-items-center g-5">
+            <div class="row align-items-center">
                 <div class="col-md-7">
                     <img src="Assets/Code_Stock_Photo(From Pexels).jpg" class="img-fluid m-md-3 mt-xs-2 rounded-3" alt="...">
                 </div>
-                <div class="col-md-4 p-5">
+                <div class="col-md-4 px-5 pt-4 pb-0">
                     <h1>
                         Data Engine
                         </h1>
@@ -75,8 +75,8 @@
         </div>
     </section>
 
-    <section  class="p-5">
-        <div class="container">
+    <section  class="container">
+        <div class="p-5">
             <div class="row row-cols-1 row-cols-md-4 g-5">
 
                 <div class="col-md">
@@ -134,8 +134,8 @@
     
     <hr class="col-8 mx-auto text-warning border border-3 border-warning">
 
-    <section  class="p-5 ">
-        <div class="container">
+    <section  class="container ">
+        <div class="p-4">
             <div class="row align-items-center">
                 <div class="col-4 ">
                     <h3 class="py-3 text-center">
@@ -158,10 +158,10 @@
     <hr class="col-8 mx-auto text-warning border border-3 border-warning">
 
 
-    <section  class="p-5 ">
-        <div class="container">
+    <section  class="container ">
+        <div class="p-4">
             <div class="row align-items-center">
-                <div class="col-4 ">
+                <div class="col-4">
                     <h3 class="py-3 text-center">
                         Usage & Sources
                     </h3>
@@ -171,7 +171,7 @@
                         The data used by the Data Engine is collected daily from different government sources. It is only as up-to-date and as accurate as the agencies have made available and is dependent on their updates.
                         The types of data collected include, for example, daily covid cases by postcode, daily covid testing numbers by postcode, and contact tracing locations.
                     </p>
-                    <ul class="list-unstyled">
+                    <!-- <ul class="list-unstyled">
                         <li>
                             <a href="table/nsw_postcode_cases"> nsw_postcode_cases</a> -
                             <a href="https://data.nsw.gov.au/data/dataset/covid-19-cases-by-location">https://data.nsw.gov.au/data/dataset/covid-19-cases-by-location</a>
@@ -180,7 +180,7 @@
                             <a href="table/vic_active_cases_postcode"> vic_active_cases_postcode</a> - 
                             <a href="https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data">https://www.dhhs.vic.gov.au/victorian-coronavirus-covid-19-data</a>
                         </li>
-                    </ul>
+                    </ul> -->
 
                     <p>Find our complete sources <a href="data_sources.html">here</a> </p>
                 </div>
