--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
     <!-- ---------------------------- -->
     <!-- Footer Content -->
     <!-- ---------------------------- -->
-    <footer class="p-5 bg-dark text-white border-top border-warning border-4">
+    <footer class="container-fluid p-5 bg-dark text-white border-top border-warning border-4 ">
 
         <div class="container bg-dark">
             <div class="row g-4">
