--- a/automated_alerts.html
+++ b/automated_alerts.html
@@ -42,8 +42,8 @@
     <!-- INTRO -->
     <!-- ---------------------- -->
     <section>
-        <div class="container-fluid p-0 ">
-            <div class="row align-items-center g-5">
+        <div class="container-fluid">
+            <div class="row align-items-center">
                 <div class="col-md-7">
                     <img src="Assets/covid_pexels-photo-3970332.jpeg" class="img-fluid m-md-3 mt-xs-2 rounded-3" alt="...">
                 </div>
