--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
     <!-- ---------------------- -->
     <!-- NAVIGATION BAR -->
     <!-- ---------------------- -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark border-bottom border-warning border-4">
+    <nav class="container-fluid navbar navbar-expand-lg bg-dark navbar-dark border-bottom border-warning border-4">
         <div class="container">
             <div class="col-lg-3">
                 <a href="index.html" class="navbar-brand">
