fixed overlapping issue on mobile

--- a/about_us.html
+++ b/about_us.html
@@ -196,7 +196,7 @@
       <div class="container">
           <h1 class="py-3">Special Thanks</h1>
 
-            <div class="row row-cols-md-3 g-5">
+            <div class="row row-cols-md-3  ">
 
                     <div class="col-sm">
                       <a href="https://nci.org.au/" class="card h-100 my-1 text-decoration-none text-dark border-light" style="width: 100%;" target="_blank">
@@ -249,7 +249,7 @@
 
   <hr class="col-8 mx-auto text-warning border border-3 border-warning">
 
-  <section class="">
+  <section class="p-3">
     <div class="container">
         <h1 class="py-3">Funding</h1>
 
