--- a/mobile_contact_tracing_map.html
+++ b/mobile_contact_tracing_map.html
@@ -54,8 +54,12 @@
                 </div> 
 
                 <div class="col"> 
-                    <h1> Contact Tracing Alert Locations<br><br>Exposure
-                    Sites <br> <br>A Map for Mobile</h1>
+                    <h1> 
+                        <!-- Contact Tracing Alert Locations -->
+                        
+                        Exposure Sites 
+                        <br> Map for Mobile
+                    </h1>
                     <br><br> 
 		  <b>Coming Soon</b>
 		  <br><br>
